Fix the message to distinguish between the state and the property.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -28,7 +28,8 @@
 				"alpha channel value": { "type": "string" },
 				"angle": { "type": "string" },
 				"aria in html specification": { "type": "string" },
-				"aria state/property": { "type": "string" },
+				"aria property": { "type": "string" },
+				"aria state": { "type": "string" },
 				"attribute name": { "type": "string" },
 				"attribute names": { "type": "string" },
 				"attribute value": { "type": "string" },
@@ -79,7 +80,8 @@
 				"floating-point number": { "type": "string" },
 				"format": { "type": "string" },
 				"fractional part": { "type": "string" },
-				"global state/property": { "type": "string" },
+				"global property": { "type": "string" },
+				"global state": { "type": "string" },
 				"hash name": { "type": "string" },
 				"hash-name reference": { "type": "string" },
 				"hash": { "type": "string" },
