--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -16,7 +16,8 @@
 		"alpha channel value": "不透明度",
 		"angle": "角度",
 		"aria in html specification": "ARIA in HTMLの仕様",
-		"aria state/property": "ARIAステート/プロパティ",
+		"aria property": "ARIAプロパティ",
+		"aria state": "ARIAステート",
 		"attribute name": "属性名",
 		"attribute names": "属性名",
 		"attribute value": "属性値",
@@ -67,7 +68,8 @@
 		"floating-point number": "浮動小数点数",
 		"format": "形式",
 		"fractional part": "小数部",
-		"global state/property": "グローバルステート/プロパティ",
+		"global property": "グローバルプロパティ",
+		"global state": "グローバルステート",
 		"hash name": "ハッシュ名",
 		"hash-name reference": "ハッシュ名参照",
 		"hash": "ハッシュ",
