Add new words to i18n.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -115,6 +115,7 @@
 				"quote": { "type": "string" },
 				"regular expression": { "type": "string" },
 				"role": { "type": "string" },
+				"roles": { "type": "string" },
 				"second": { "type": "string" },
 				"semantics": { "type": "string" },
 				"serialized-origin": { "type": "string" },
@@ -196,6 +197,7 @@
 				"{0} to {1} chars": { "type": "string" },
 				"{0} to {1} digits": { "type": "string" },
 				"{0} to {1}": { "type": "string" },
+				"{0}. Or, {1}": { "type": "string" },
 				"\"{0}\" ID": { "type": "string" },
 				"a {0}": { "type": "string" },
 				"an {0}": { "type": "string" },
