--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -103,6 +103,7 @@
 		"quote": "クオート",
 		"regular expression": "正規表現",
 		"role": "ロール",
+		"roles": "ロール",
 		"second": "秒",
 		"semantics": "セマンティクス",
 		"serialized-origin": "シリアル化されたオリジン",
@@ -179,6 +180,7 @@
 		"{0} to {1} chars": "{0}から{1}文字",
 		"{0} to {1} digits": "{0}から{1}桁",
 		"{0} to {1}": "{0}から{1}",
+		"{0}. Or, {1}": "{0}。または、{1}",
 		"\"{0}\" ID": "ID「{0}」",
 		"a {0}": "{0}",
 		"an {0}": "{0}",
