Add the option checkingPresentationalChildren

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -195,9 +195,11 @@
 		"It doesn't need {0}": "{0}は不要です",
 		"It expects {0:c}": "{0}である必要があります",
 		"It expects {0}": "{0}が必要です",
+		"it has {0} as an ancestor that doesn't expose its descendants to the accessibility tree": "子孫をアクセシビリティツリーに公開しない{0}を先祖に持っています",
 		"It includes {0}": "{0}を含んでいます",
 		"It is {0:c}": "{0:c}",
 		"It is {0}": "{0}です",
+		"it may be ineffective because {0}": "{0}、そのため効果がない可能性があります",
 		"It needs {0}": "{0}が必要です",
 		"less than {0}": "{0}未満",
 		"less than or equal to {0}": "{0}以下",
