--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -212,9 +212,13 @@
 				"It doesn't need {0}": { "type": "string" },
 				"It expects {0:c}": { "type": "string" },
 				"It expects {0}": { "type": "string" },
+				"it has {0} as an ancestor that doesn't expose its descendants to the accessibility tree": {
+					"type": "string"
+				},
 				"It includes {0}": { "type": "string" },
 				"It is {0:c}": { "type": "string" },
 				"It is {0}": { "type": "string" },
+				"it may be ineffective because {0}": { "type": "string" },
 				"It needs {0}": { "type": "string" },
 				"less than {0}": { "type": "string" },
 				"less than or equal to {0}": { "type": "string" },
