--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -237,7 +237,9 @@
 				"the current \"{0}\" {1}": { "type": "string" },
 				"the implicit \"{0}\" {1}": { "type": "string" },
 				"the list of {0}": { "type": "string" },
+				"the max number of elements required is {0}": { "type": "string" },
 				"the same {0} as {1}": { "type": "string" },
+				"there is more content than it needs": { "type": "string" },
 				"unexpected {0}": { "type": "string" },
 				"unique {0}": { "type": "string" },
 				"use {0}": { "type": "string" },
