--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -39,9 +39,11 @@
 		"character": "文字",
 		"characters": "文字",
 		"class name": "クラス名",
+		"code block": "コードブロック",
 		"comma-separated list": "カンマ区切りのリスト",
 		"comma": "カンマ",
 		"commas": "カンマ",
+		"comment": "コメント",
 		"content": "内容",
 		"contents": "内容",
 		"coron": "コロン",
@@ -89,12 +91,14 @@
 		"minute": "分",
 		"month": "月",
 		"newline": "改行",
+		"node": "ノード",
 		"non-negative integer": "正の整数",
 		"non-standard": "非標準",
 		"number": "数値",
 		"obsolete doctype": "廃止された文書型",
 		"obsolete": "廃止ずみ",
 		"one code point character": "1つのコードポイントから成る文字",
+		"one or more elements": "1つ以上の要素",
 		"one": "1",
 		"origin": "オリジン",
 		"password": "パスワード",
@@ -113,6 +117,7 @@
 		"spaces": "空白",
 		"tag name": "タグ名",
 		"tag names": "タグ名",
+		"text node": "テキストノード",
 		"the abstract role": "抽象ロール",
 		"the content of the list": "リストの内容",
 		"the html specification": "HTMLの仕様",
@@ -123,11 +128,13 @@
 		"time": "時間",
 		"token": "トークン",
 		"top level": "トップレベル",
+		"transparent model": "トランスペアレントモデル",
 		"unit": "単位",
 		"uppercase": "大文字",
 		"url who schema is an http(s) schema": "HTTP(S)スキーマのURL",
 		"username": "ユーザー名",
 		"value": "値",
+		"void element": "空要素",
 		"whitespace": "ホワイトスペース",
 		"whitespaces": "ホワイトスペース",
 		"xml name": "XML名",
@@ -156,9 +163,12 @@
 		"{0} has {1}": "{0}は{1}を持っています",
 		"{0} includes {1}": "{0}は{1}を含んでいます",
 		"{0} is {1:c}": "{0}{1:c}",
+		"{0} is {1} but {2}": "{0}は{1}ですが、{2}",
 		"{0} is {1}": "{0}は{1}です",
 		"{0} is disallowed": "{0}は禁止されています",
 		"{0} is not {1}": "{0}は{1}ではありません",
+		"{0} is not allowed in {1} in this context": "このコンテキストでは、{1}に{0}を含めることはできません",
+		"{0} is not allowed in {1} through the transparent model in this context": "このコンテキストでは、トランスペアレントモデルを介して{1}に{0}を含めることはできません",
 		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
 		"{0} less than {1}": "{1}より小さい{0}",
 		"{0} less than or equal to {1}": "{1}以下の{0}",
@@ -183,8 +193,9 @@
 		"{0}. Or, {1}": "{0}。または、{1}",
 		"\"{0}\" ID": "ID「{0}」",
 		"a {0}": "{0}",
-		"an {0}": "{0}",
 		"Allowed values are: {0}": "許可されている値は次のとおりです {0}",
+		"also disallows {0} in this context": "このコンテキスト内では{0}も許可しません",
+		"an {0}": "{0}",
 		"Cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
 		"Cannot overwrite {0}": "{0}を上書きすることはできません",
 		"Did you mean \"{0}\"?": "「{0}」ではありませんか？",
@@ -207,6 +218,8 @@
 		"less than or equal to {0}": "{0}以下",
 		"Missing {0} in {1}": "{1}に{0}がありません",
 		"Missing {0}": "{0}がありません",
+		"Need {0}": "{0}が必要です",
+		"Need \"{0}\"": "「{0}」が必要です",
 		"Never {0} {1}": "{1}を{0}しないでください",
 		"Require {0}": "{0}が必要です",
 		"the {0} format": "{0}形式",
@@ -218,7 +231,9 @@
 		"the current \"{0}\" {1}": "現在の{1}「{0}」",
 		"the implicit \"{0}\" {1}": "暗黙の{1}「{0}」",
 		"the list of {0}": "{0}のリスト",
+		"the max number of elements required is {0}": "必要な要素数の最大は{0}です",
 		"the same {0} as {1}": "{1}と同等の{0}",
+		"there is more content than it needs": "必要以上のコンテンツがあります",
 		"unexpected {0}": "期待されない{0}",
 		"unique {0}": "一意の{0}",
 		"use {0}": "{0}を使いましょう",
