--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -61,7 +61,7 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
 }
 ```
 
-This is the default setting. If you never used it, you should probably copy it to your configuration file then customize you like.
+No set rules in the default. If you never used it, you should probably copy the above settings to your configuration file then customize you like.
 
 ## Scoped Rules
 
@@ -98,4 +98,4 @@ If you want the part of structures only to apply some rule then set the tag name
 
 ## Rules
 
-The detail of Each rule is said from the [Rules page](/rules).
+The detail of each rule is said from the [Rules page](/rules).
