ci: enable spellcheck with cspell

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -56,7 +56,7 @@
 				"commas": { "type": "string" },
 				"content": { "type": "string" },
 				"contents": { "type": "string" },
-				"coron": { "type": "string" },
+				"colon": { "type": "string" },
 				"custom element name": { "type": "string" },
 				"date time": { "type": "string" },
 				"date": { "type": "string" },
@@ -169,7 +169,7 @@
 				"{0} greater than {1}": { "type": "string" },
 				"{0} greater than or equal to {1} less than {2}": { "type": "string" },
 				"{0} greater than or equal to {1} less than or equal to {2}": { "type": "string" },
-				"{0} greater than or euqal to {1}": { "type": "string" },
+				"{0} greater than or equal to {1}": { "type": "string" },
 				"{0} has {1}": { "type": "string" },
 				"{0} includes {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
