--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -46,7 +46,7 @@
 		"comment": "コメント",
 		"content": "内容",
 		"contents": "内容",
-		"coron": "コロン",
+		"colon": "コロン",
 		"custom element name": "カスタム要素名",
 		"date time": "日時",
 		"date": "日",
@@ -159,7 +159,7 @@
 		"{0} greater than {1}": "{1}より大きい{0}",
 		"{0} greater than or equal to {1} less than {2}": "{1}以上で{2}より小さい{0}",
 		"{0} greater than or equal to {1} less than or equal to {2}": "{1}以上で{2}以下の{0}",
-		"{0} greater than or euqal to {1}": "{1}以上の{0}",
+		"{0} greater than or equal to {1}": "{1}以上の{0}",
 		"{0} has {1}": "{0}は{1}を持っています",
 		"{0} includes {1}": "{0}は{1}を含んでいます",
 		"{0} is {1:c}": "{0}{1:c}",
