--- a/website/src/pages/configuration/index.mdx
+++ b/website/src/pages/configuration/index.mdx
@@ -231,7 +231,7 @@ But this is the format for version `1.x`, so it's **deprecated**.
 
 ```json
 {
-  // Depraceted
+  // Deprecated
   "specs": ["@markuplint/vue-spec", "./path/to/custom-specs/any-lang"]
 }
 ```
@@ -245,11 +245,11 @@ interface Config {
         [regex: string]: string;
       }
     /**
-     * @Depraceted
+     * @Deprecated
      */
     | string[]
     /**
-     * @Depraceted
+     * @Deprecated
      */
     | string;
 }
@@ -530,7 +530,7 @@ You can select elements by using `regexSelector` instead of the `selector` prope
 The `regexSelector` property has `nodeName`, `attrName`, and `attrValue` properties
 that are optional regular expression.
 So each of these enables to omit.
-It is AND condition if combinate.
+It is AND condition if combine.
 
 ```json
 {
