--- a/website/src/pages/configuration/index.mdx
+++ b/website/src/pages/configuration/index.mdx
@@ -211,7 +211,7 @@ prop: value
 If you use a view library, the parser detects a component as a native HTML element if you name it with only lower-case characters.
 Each parser has a default pattern, but you should specify the `authoredElementName` option if you need different naming patterns.
 
-```vue
+```html
 <template>
   <custom><!-- It detects as a native HTML element if not specified. --></custom>
 </template>
