Fix to match lowercase keyword in i18n.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -51,9 +51,11 @@
 				"character": { "type": "string" },
 				"characters": { "type": "string" },
 				"class name": { "type": "string" },
+				"code block": { "type": "string" },
 				"comma-separated list": { "type": "string" },
 				"comma": { "type": "string" },
 				"commas": { "type": "string" },
+				"comment": { "type": "string" },
 				"content": { "type": "string" },
 				"contents": { "type": "string" },
 				"colon": { "type": "string" },
@@ -101,12 +103,14 @@
 				"minute": { "type": "string" },
 				"month": { "type": "string" },
 				"newline": { "type": "string" },
+				"node": { "type": "string" },
 				"non-negative integer": { "type": "string" },
 				"non-standard": { "type": "string" },
 				"number": { "type": "string" },
 				"obsolete doctype": { "type": "string" },
 				"obsolete": { "type": "string" },
 				"one code point character": { "type": "string" },
+				"one or more elements": { "type": "string" },
 				"one": { "type": "string" },
 				"origin": { "type": "string" },
 				"password": { "type": "string" },
@@ -126,6 +130,7 @@
 				"tag name": { "type": "string" },
 				"tag names": { "type": "string" },
 				"tag": { "type": "string" },
+				"text node": { "type": "string" },
 				"the abstract role": { "type": "string" },
 				"the content of the list": { "type": "string" },
 				"the html specification": { "type": "string" },
@@ -136,11 +141,13 @@
 				"time": { "type": "string" },
 				"token": { "type": "string" },
 				"top level": { "type": "string" },
+				"transparent model": { "type": "string" },
 				"unit": { "type": "string" },
 				"uppercase": { "type": "string" },
 				"url who schema is an http(s) schema": { "type": "string" },
 				"username": { "type": "string" },
 				"value": { "type": "string" },
+				"void element": { "type": "string" },
 				"whitespace": { "type": "string" },
 				"whitespaces": { "type": "string" },
 				"xml name": { "type": "string" },
@@ -174,8 +181,11 @@
 				"{0} includes {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
+				"{0} is {1} but {2}": { "type": "string" },
 				"{0} is disallowed": { "type": "string" },
 				"{0} is not {1}": { "type": "string" },
+				"{0} is not allowed in {1} in this context": { "type": "string" },
+				"{0} is not allowed in {1} through the transparent model in this context": { "type": "string" },
 				"{0} is unmatched with the below patterns: {1}": { "type": "string" },
 				"{0} less than {1}": { "type": "string" },
 				"{0} less than or equal to {1}": { "type": "string" },
@@ -200,40 +210,43 @@
 				"{0}. Or, {1}": { "type": "string" },
 				"\"{0}\" ID": { "type": "string" },
 				"a {0}": { "type": "string" },
+				"allowed values are: {0}": { "type": "string" },
+				"also disallows {0} in this context": { "type": "string" },
 				"an {0}": { "type": "string" },
-				"Allowed values are: {0}": { "type": "string" },
-				"Cannot overwrite {0} to {1}": { "type": "string" },
-				"Cannot overwrite {0}": { "type": "string" },
-				"Did you mean \"{0}\"?": { "type": "string" },
+				"cannot overwrite {0} to {1}": { "type": "string" },
+				"cannot overwrite {0}": { "type": "string" },
+				"did you mean \"{0}\"?": { "type": "string" },
 				"either {0}": { "type": "string" },
 				"extra {0}": { "type": "string" },
-				"Found {0}": { "type": "string" },
+				"found {0}": { "type": "string" },
 				"in the range between {0} and {1}": { "type": "string" },
-				"It doesn't need {0}": { "type": "string" },
-				"It expects {0:c}": { "type": "string" },
-				"It expects {0}": { "type": "string" },
+				"it doesn't need {0}": { "type": "string" },
+				"it expects {0:c}": { "type": "string" },
+				"it expects {0}": { "type": "string" },
 				"it has {0} as an ancestor that doesn't expose its descendants to the accessibility tree": {
 					"type": "string"
 				},
-				"It includes {0}": { "type": "string" },
-				"It is {0:c}": { "type": "string" },
-				"It is {0}": { "type": "string" },
-				"It may be focusable in spite of it has aria-hidden=true": { "type": "string" },
-				"It may be focusable in spite of it has the ancestor that has aria-hidden=true": { "type": "string" },
+				"it includes {0}": { "type": "string" },
+				"it is {0:c}": { "type": "string" },
+				"it is {0}": { "type": "string" },
+				"it may be focusable in spite of it has aria-hidden=true": { "type": "string" },
+				"it may be focusable in spite of it has the ancestor that has aria-hidden=true": { "type": "string" },
 				"it may be ineffective because {0}": { "type": "string" },
-				"It needs {0}": { "type": "string" },
+				"it needs {0}": { "type": "string" },
 				"less than {0}": { "type": "string" },
 				"less than or equal to {0}": { "type": "string" },
-				"Missing {0} in {1}": { "type": "string" },
-				"Missing {0}": { "type": "string" },
-				"Never {0} {1}": { "type": "string" },
-				"Require {0}": { "type": "string" },
+				"missing {0} in {1}": { "type": "string" },
+				"missing {0}": { "type": "string" },
+				"need {0}": { "type": "string" },
+				"need \"{0}\"": { "type": "string" },
+				"never {0} {1}": { "type": "string" },
+				"require {0}": { "type": "string" },
 				"the {0} format": { "type": "string" },
 				"the {0} part": { "type": "string" },
 				"the {0}": { "type": "string" },
 				"the \"{0}\" {1}": { "type": "string" },
 				"the \"{0}\"": { "type": "string" },
-				"the CSS Syntax \"{0}\"": { "type": "string" },
+				"the CSS syntax \"{0}\"": { "type": "string" },
 				"the current \"{0}\" {1}": { "type": "string" },
 				"the implicit \"{0}\" {1}": { "type": "string" },
 				"the list of {0}": { "type": "string" },
