--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -117,6 +117,7 @@
 		"spaces": "空白",
 		"tag name": "タグ名",
 		"tag names": "タグ名",
+		"tag": "タグ",
 		"text node": "テキストノード",
 		"the abstract role": "抽象ロール",
 		"the content of the list": "リストの内容",
@@ -193,41 +194,41 @@
 		"{0}. Or, {1}": "{0}。または、{1}",
 		"\"{0}\" ID": "ID「{0}」",
 		"a {0}": "{0}",
-		"Allowed values are: {0}": "許可されている値は次のとおりです {0}",
+		"allowed values are: {0}": "許可されている値は次のとおりです {0}",
 		"also disallows {0} in this context": "このコンテキスト内では{0}も許可しません",
 		"an {0}": "{0}",
-		"Cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
-		"Cannot overwrite {0}": "{0}を上書きすることはできません",
-		"Did you mean \"{0}\"?": "「{0}」ではありませんか？",
+		"cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
+		"cannot overwrite {0}": "{0}を上書きすることはできません",
+		"did you mean \"{0}\"?": "「{0}」ではありませんか？",
 		"either {0}": "{0}のいずれか",
 		"extra {0}": "余計な{0}",
-		"Found {0}": "{0}が発見されました",
+		"found {0}": "{0}が発見されました",
 		"in the range between {0} and {1}": "{0}から{1}の範囲",
-		"It doesn't need {0}": "{0}は不要です",
-		"It expects {0:c}": "{0}である必要があります",
-		"It expects {0}": "{0}が必要です",
+		"it doesn't need {0}": "{0}は不要です",
+		"it expects {0:c}": "{0}である必要があります",
+		"it expects {0}": "{0}が必要です",
 		"it has {0} as an ancestor that doesn't expose its descendants to the accessibility tree": "子孫をアクセシビリティツリーに公開しない{0}を先祖に持っています",
-		"It includes {0}": "{0}を含んでいます",
-		"It is {0:c}": "{0:c}",
-		"It is {0}": "{0}です",
-		"It may be focusable in spite of it has aria-hidden=true": "aria-hidden=trueを持っていますが、フォーカスできてしまうかもしれません",
-		"It may be focusable in spite of it has the ancestor that has aria-hidden=true": "先祖がaria-hidden=trueを持っていますが、フォーカスできてしまうかもしれません",
+		"it includes {0}": "{0}を含んでいます",
+		"it is {0:c}": "{0:c}",
+		"it is {0}": "{0}です",
+		"it may be focusable in spite of it has aria-hidden=true": "aria-hidden=trueを持っていますが、フォーカスできてしまうかもしれません",
+		"it may be focusable in spite of it has the ancestor that has aria-hidden=true": "先祖がaria-hidden=trueを持っていますが、フォーカスできてしまうかもしれません",
 		"it may be ineffective because {0}": "{0}、そのため効果がない可能性があります",
-		"It needs {0}": "{0}が必要です",
+		"it needs {0}": "{0}が必要です",
 		"less than {0}": "{0}未満",
 		"less than or equal to {0}": "{0}以下",
-		"Missing {0} in {1}": "{1}に{0}がありません",
-		"Missing {0}": "{0}がありません",
-		"Need {0}": "{0}が必要です",
-		"Need \"{0}\"": "「{0}」が必要です",
-		"Never {0} {1}": "{1}を{0}しないでください",
-		"Require {0}": "{0}が必要です",
+		"missing {0} in {1}": "{1}に{0}がありません",
+		"missing {0}": "{0}がありません",
+		"need {0}": "{0}が必要です",
+		"need \"{0}\"": "「{0}」が必要です",
+		"never {0} {1}": "{1}を{0}しないでください",
+		"require {0}": "{0}が必要です",
 		"the {0} format": "{0}形式",
 		"the {0} part": "{0}の部分",
 		"the {0}": "{0}",
 		"the \"{0}\" {1}": "{1}「{0}」",
 		"the \"{0}\"": "「{0}」",
-		"the CSS Syntax \"{0}\"": "CSS構文として「{0}」",
+		"the CSS syntax \"{0}\"": "CSS構文として「{0}」",
 		"the current \"{0}\" {1}": "現在の{1}「{0}」",
 		"the implicit \"{0}\" {1}": "暗黙の{1}「{0}」",
 		"the list of {0}": "{0}のリスト",
