Add the `label-has-control` rule.

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -47,6 +47,8 @@
 		"comment": "コメント",
 		"content": "内容",
 		"contents": "内容",
+		"control": "コントロール",
+		"controls": "コントロール",
 		"custom element name": "カスタム要素名",
 		"date time": "日時",
 		"date": "日",
@@ -148,6 +150,7 @@
 		"{0} ({1})": "{0}({1})",
 		"{0} according to {1}": "{1}において、{0}",
 		"{0} as {1}": "{1}として{0}",
+		"{0} associates only {1}": "{0}は{1}だけを関連付けます",
 		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
 		"{0} chars": "{0}文字",
 		"{0} contradicts {1}": "{0}は{1}と矛盾しています",
@@ -184,6 +187,7 @@
 		"{0} or more digits": "{0}桁以上",
 		"{0} part of {1}": "{1}の{0}の部分",
 		"{0} should {1}": "{0}は{1}したほうがよいです",
+		"{0} should associate with {1}": "{0}は{1}と関連付けたほうがよいです",
 		"{0} should be {1}": "{0}は{1}にしたほうがよいです",
 		"{0} should not {1}": "{0}は{1}しないほうがよいです",
 		"{0} should not be {1}": "{0}は{1}にしないほうがよいです",
@@ -202,6 +206,7 @@
 		"did you mean \"{0}\"?": "「{0}」ではありませんか？",
 		"either {0}": "{0}のいずれか",
 		"extra {0}": "余計な{0}",
+		"first {0}": "最初の{0}",
 		"found {0}": "{0}が発見されました",
 		"in the range between {0} and {1}": "{0}から{1}の範囲",
 		"it doesn't need {0}": "{0}は不要です",
