--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -19,6 +19,7 @@ title: Rules
 
 ## Accessibility
 
+- [`label-has-control`](/rules/label-has-control)
 - [`landmark-roles`](/rules/landmark-roles)
 - [`no-refer-to-non-existent-id`](/rules/no-refer-to-non-existent-id)
 - [`require-accessible-name`](/rules/require-accessible-name)
