--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -40,6 +40,7 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
     "id-duplication": true,
     "ineffective-attr": true,
     "invalid-attr": true,
+    "label-has-control": true,
     "landmark-roles": true,
     "no-boolean-attr-value": true,
     "no-default-value": true,
