--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -155,6 +155,7 @@
 		"{0} chars": "{0}文字",
 		"{0} contradicts {1}": "{0}は{1}と矛盾しています",
 		"{0} digits": "{0}桁",
+		"{0} disallows {1}": "{0}は{1}を許可しません",
 		"{0} does not exist": "{0}は存在しません",
 		"{0} expects {1:c}": "{0}は{1}である必要があります",
 		"{0} expects {1}": "{0}には{1}が必要です",
