--- a/website/docs/community/index.mdx
+++ b/website/docs/community/index.mdx
@@ -123,3 +123,24 @@ import Grid from '../../src/components/Grid';
     github="https://github.com/masuP9"
   />
 </Grid>
+
+## Personal sponsors
+
+<Grid colWidth="10em">
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/91733847"
+    name="Tokitake"
+    github="https://github.com/Tokitake"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/1996642"
+    name="yamanoku"
+    github="https://github.com/yamanoku"
+  />
+</Grid>
+
+### Past sponsors
+
+- [miita](https://github.com/mikimhk)
