Translate configuration pages in Japanese

--- a/website/i18n/ja/docusaurus-plugin-content-docs/current.json
+++ b/website/i18n/ja/docusaurus-plugin-content-docs/current.json
@@ -4,5 +4,11 @@
   },
   "sidebar.rules.category.Rules": {
     "message": "ルール"
+  },
+  "sidebar.configuration.category.Configuration": {
+    "message": "設定"
+  },
+  "sidebar.configuration.category.Usecases": {
+    "message": "ユースケース"
   }
 }
