Replace relative paths with absolute paths

--- a/website/docs/community/branding.mdx
+++ b/website/docs/community/branding.mdx
@@ -1,6 +1,6 @@
-import LogoContainer from '../../src/components/LogoContainer';
-import Grid from '../../src/components/Grid';
-import Color from '../../src/components/Color';
+import LogoContainer from '@site/src/components/LogoContainer';
+import Grid from '@site/src/components/Grid';
+import Color from '@site/src/components/Color';
 
 # Branding
 
