--- a/website/docs/community/index.mdx
+++ b/website/docs/community/index.mdx
@@ -1,5 +1,5 @@
-import Profile from '../../src/components/Profile';
-import Grid from '../../src/components/Grid';
+import Profile from '@site/src/components/Profile';
+import Grid from '@site/src/components/Grid';
 
 # Community
 
