--- a/website/docs/community/index.mdx
+++ b/website/docs/community/index.mdx
@@ -102,8 +102,13 @@ import Grid from '@site/src/components/Grid';
     name="yamanoku"
     github="https://github.com/yamanoku"
   />
-  <Profile mini avatar="https://avatars.githubusercontent.com/u/4032232" name="kgsi" github="https://github.com/___" />
-  <Profile mini avatar="https://avatars.githubusercontent.com/u/423234" name="josa42" github="https://github.com/___" />
+  <Profile mini avatar="https://avatars.githubusercontent.com/u/4032232" name="kgsi" github="https://github.com/kgsi" />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/423234"
+    name="josa42"
+    github="https://github.com/josa42"
+  />
   <Profile
     mini
     avatar="https://avatars.githubusercontent.com/u/13248811"
