--- a/website/docs/community/branding.mdx
+++ b/website/docs/community/branding.mdx
@@ -38,9 +38,9 @@ The abbreviated name is **ML**. Use `ml-` as a prefix.
 
 <Grid colWidth="20em">
   <LogoContainer src="/img/logo-vertical.svg" caption="Standard (Symbol and wordmark)" mode="light" />
-  <LogoContainer src="/img/logo-vertical.svg#d" caption="Standard on Dark (Symbol and wordmark)" mode="dark" />
+  <LogoContainer src="/img/logo-vertical.svg#d" caption="Standard (Symbol and wordmark) on Dark" mode="dark" />
   <LogoContainer src="/img/logo-vertical.svg#sl" caption="Monochrome (Symbol and wordmark)" mode="light" />
-  <LogoContainer src="/img/logo-vertical.svg#sd" caption="Monochrome on Dark (Symbol and wordmark)" mode="dark" />
+  <LogoContainer src="/img/logo-vertical.svg#sd" caption="Monochrome (Symbol and wordmark) on Dark" mode="dark" />
 </Grid>
 
 ### Without wordmark
