Translate community pages

--- a/website/i18n/ja/docusaurus-plugin-content-docs/current.json
+++ b/website/i18n/ja/docusaurus-plugin-content-docs/current.json
@@ -10,5 +10,11 @@
   },
   "sidebar.configuration.category.Usecases": {
     "message": "ユースケース"
+  },
+  "sidebar.community.category.Community": {
+    "message": "コミュニティ"
+  },
+  "sidebar.community.link.Store": {
+    "message": "ストア"
   }
 }
