Change twitter id to show

--- a/website/i18n/ja/docusaurus-plugin-content-docs/current/community/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs/current/community/index.mdx
@@ -39,7 +39,7 @@ import Grid from '@site/src/components/Grid';
     name="Kagan"
     desc="ウェブサイトメンテナンス"
     github="https://github.com/kagankan"
-    twitter="https://twitter.com/kagan3375"
+    twitter="https://twitter.com/kagan_dev"
   />
 </Grid>
 
