--- a/website/docs/community/index.mdx
+++ b/website/docs/community/index.mdx
@@ -39,7 +39,7 @@ import Grid from '@site/src/components/Grid';
     name="Kagan"
     desc="Maintains website"
     github="https://github.com/kagankan"
-    twitter="https://twitter.com/kagan3375"
+    twitter="https://twitter.com/kagan_dev"
   />
 </Grid>
 
