Fix sidebar tree on Community pages

--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current.json
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current.json
@@ -1,4 +1,7 @@
 {
+  "sidebar.community.category.Community": {
+    "message": "コミュニティ"
+  },
   "sidebar.community.link.Store": {
     "message": "ストア"
   }
