fix typo: コニュニティ => コミュニティ

--- a/website/i18n/ja/docusaurus-theme-classic/navbar.json
+++ b/website/i18n/ja/docusaurus-theme-classic/navbar.json
@@ -12,7 +12,7 @@
     "message": "API"
   },
   "item.label.Community": {
-    "message": "コニュニティ"
+    "message": "コミュニティ"
   },
   "item.label.Playground": {
     "message": "試してみる"
