--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -116,6 +116,7 @@
 				"one": { "type": "string" },
 				"origin": { "type": "string" },
 				"password": { "type": "string" },
+				"placeholder label option": { "type": "string" },
 				"property name": { "type": "string" },
 				"query": { "type": "string" },
 				"quote": { "type": "string" },
@@ -182,6 +183,7 @@
 				"{0} greater than or equal to {1} less than or equal to {2}": { "type": "string" },
 				"{0} greater than or equal to {1}": { "type": "string" },
 				"{0} has {1}": { "type": "string" },
+				"{0} if it has {1}": { "type": "string" },
 				"{0} includes {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
