--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -145,6 +145,7 @@
 		"zero": "ゼロ"
 	},
 	"sentences": {
+		"; <{0}> was evaluated as <{1}>": " / <{0}>は<{1}>として評価されています",
 		"{0:c} and {1:c}": "{0}且つ、{1}",
 		"{0:c} on {1}": "{1}では、{0:c}",
 		"{0} ({1})": "{0}({1})",
