--- a/website/community/index.mdx
+++ b/website/community/index.mdx
@@ -86,21 +86,33 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
+    avatar="https://avatars.githubusercontent.com/u/1996642"
+    name="yamanoku"
+    github="https://github.com/yamanoku"
+  />
+  <Profile
+    mini
     avatar="https://avatars.githubusercontent.com/u/1481270"
     name="undsoft"
     github="https://github.com/undsoft"
   />
   <Profile
     mini
-    avatar="https://avatars.githubusercontent.com/u/51276728"
-    name="shippokun"
-    github="https://github.com/shippokun"
+    avatar="https://avatars.githubusercontent.com/u/4138486"
+    name="SaekiTominaga"
+    github="https://github.com/SaekiTominaga"
   />
   <Profile
     mini
-    avatar="https://avatars.githubusercontent.com/u/1996642"
-    name="yamanoku"
-    github="https://github.com/yamanoku"
+    avatar="https://avatars.githubusercontent.com/u/3771988"
+    name="ISODA Yu"
+    github="https://github.com/isoden"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/51276728"
+    name="shippokun"
+    github="https://github.com/shippokun"
   />
   <Profile mini avatar="https://avatars.githubusercontent.com/u/4032232" name="kgsi" github="https://github.com/kgsi" />
   <Profile
