--- a/packages/@markuplint/i18n/package.json
+++ b/packages/@markuplint/i18n/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/i18n",
-	"version": "3.0.0-rc.5",
+	"version": "3.2.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
